# GrayScaleMorph

./: .gitignore  CMakeLists.txt  README.md  cfg.json  forward_cfg.json  inverse_cfg.json  inverse_whole_cfg.json
.claude/: settings.local.json
common/: config.cpp  config.hpp  material.hpp  output.cpp  output.hpp
core/: boundary_utils.cpp  boundary_utils.h  common.hpp  config.cpp  config.hpp  functions.cpp  functions.h  material.cpp  material.hpp  morph_functions.hpp  morphmesh.cpp  morphmesh.hpp  newton.cpp  newton.h  output.cpp  output.hpp  parameterization.cpp  parameterization.h  parameterize_pipeline.cpp  patch_utils.h  simulation_utils.h
eval/: main.cpp
forward/: main.cpp
help/: ROUNDTRIP_VERIFICATION.md  ROUNDTRIP_VERIFICATION.tex
inverse/: inverse_design.cpp  inverse_design.h  main.cpp
inverse_whole/: main.cpp
metric/: patch_metrics_main.cpp  patch_utils.cpp
morph/: LocalGlobalSolver.cpp  functions.cpp  functions.h  inverse_design.cpp  main.cpp  morph_functions.cpp  morphmesh.cpp  morphmesh.hpp  newton.cpp  parameterize_pipeline.h  simulation_utils.cpp
parameterize/: main.cpp
src/: LocalGlobalSolver.cpp  LocalGlobalSolver.h  cfg.json  cfg.json.bak  common.hpp  config.cpp  config.hpp  functions.cpp  functions.h  main.cpp  material.cpp  material.hpp  morph_functions.cpp  morph_functions.hpp  morphmesh.cpp  morphmesh.hpp  newton.cpp  newton.h  output.cpp  output.hpp  parameterization.cpp  parameterization.h  simulation_utils.cpp  simulation_utils.h  solvers.h  timer.h
verify/: main.cpp
